--- a/.github/workflows/feature&bugfix.yml
+++ b/.github/workflows/feature&bugfix.yml
@@ -8,6 +8,10 @@ on:
     branches:
       - feature-*
       - bugfix-*
+  pull_request:
+    branches:
+      - feature-*
+      - bugfix-*
     paths:
       - package.json
       - CHANGELOG
