Updated pipeline to support push & pull_request both.

--- a/.github/workflows/feature&bugfix.yml
+++ b/.github/workflows/feature&bugfix.yml
@@ -8,13 +8,16 @@ on:
     branches:
       - feature-*
       - bugfix-*
-  pull_request:
-    branches:
-      - feature-*
-      - bugfix-*
     paths:
       - package.json
       - CHANGELOG
+  pull_request:
+    branches:
+      - feature-*
+    paths:
+      - package.json
+      - CHANGELOG
+      - bugfix-*
 
 jobs:
   build:
