--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "npm-run-all --silent test-*",
-    "test-audit": "npm audit ---audit-level=moderate",
+    "test-audit": "npm audit ---audit-level=critical",
     "test-lint": "eslint ./src/**/*.js"
   },
   "author": "",
