--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@inbloxme/inbloxme-identity-wallet",
   "version": "1.0.4",
-  "description": "Package for interacting with the Inblox Handlename Smart Contracts.",
+  "description": "Package for interacting with the Inblox ID Smart Contracts.",
   "main": "src/index.js",
   "scripts": {
     "test": "npm-run-all --silent test-*",
