Revert "initial commit"
This reverts commit 8953a1b0c2d393d9d2a536aa5902ae5ff018cc4b.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "npm-run-all --silent test-*",
     "test-audit": "npm audit ---audit-level=critical",
-    "test-lint": "eslint ./src/**/*.js",
-    "start": "node src/index.js"
+    "test-lint": "eslint ./src/**/*.js"
   },
   "author": "",
   "license": "ISC",
